Bug 368034 - Moving a diagram is not reflected into the saved model
Summary: Moving a diagram is not reflected into the saved model
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.19.3 (KDE Applications 16.04.3)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-31 06:50 UTC by Ralf Habacker
Modified: 2016-08-31 11:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.20.1 (KDE Applications 16.08.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-08-31 06:50:33 UTC
Moving 

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. add a folder below logical view
3. move the present class diagram into that folder
4. Save the model into an xmi file

Actual Results:  
From inspecting the xmi file the class diagram is still located at the top level 
    <XMI.extension xmi.extender="umbrello">
      <diagrams>
       <diagram  name="Klassendiagramm" ....>
         <widgets/>
        <messages/>
        <associations/>
       </diagram>
      </diagrams>
     </XMI.extension>

Only in the tree view item list the class diagram is located below the new folder

   <UML:Package  ... xmi.id="qJmuSHB4q7mV" name="neuer_ordner">

   <listitem open="1" type="801" id="Logical View">
      <listitem open="1" type="803" id="qJmuSHB4q7mV">
       <listitem open="0" type="807" id="y0W8iaIQ0G4b" label="Klassendiagramm"/>
     </listitem>
   </listitem>

Expected Results:  
The model in the xmi file should reflect the visible state.
Comment 1 Ralf Habacker 2016-08-31 11:21:25 UTC
Git commit b07c3e35b744ec7f428b9b2a38d711f284538c08 by Ralf Habacker.
Committed on 31/08/2016 at 10:49.
Pushed by habacker into branch 'Applications/16.08'.

Fix 'Moving a diagram is not reflected into the saved model'.

With this commit the logic of UMLFolder::removeView () has been changed
to not delete the removed view.
FIXED-IN:2.20.1 (KDE Applications 16.08.1)

M  +1    -1    umbrello/uml.h
M  +1    -0    umbrello/umldoc.cpp
M  +18   -0    umbrello/umllistview.cpp
M  +0    -1    umbrello/umlmodel/folder.cpp

http://commits.kde.org/umbrello/b07c3e35b744ec7f428b9b2a38d711f284538c08