Fix 'Moving a diagram is not reflected into the saved model'.

With this commit the logic of UMLFolder::removeView () has been changed
to not delete the removed view.

BUG:368034
FIXED-IN:2.20.1 (KDE Applications 16.08.1)